# gitbar

./: CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: activity-section.tsx  contribution-calendar.tsx  detail-view.tsx  empty-state.tsx  error-boundary.tsx  icons.tsx  issue-section.tsx  item-card.tsx  label-badge.tsx  load-more-sentinel.tsx  my-activity-item.tsx  other-activity-item.tsx  pr-section.tsx  repo-item.tsx  repo-section.tsx  safe-markdown.tsx  section-boundary.tsx  stats-summary.tsx  tab-button.tsx
src/hooks/: use-github.ts  use-lazy-list.ts
src/hooks/github/: api.ts  mappers.test.ts  mappers.ts  queries.test.ts  queries.ts  types.ts
src/lib/: review-badge.test.ts  review-badge.ts  time.test.ts  time.ts
