[package]
name = "gitbar"
version = "0.1.0"
description = "GitHub menubar dashboard"
authors = ["ramonclaudio"]
license = "MIT"
repository = "https://github.com/ramonclaudio/gitbar"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
window-vibrancy = "0.5"


